[package]
name = "philiprehberger-ip-utils"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Philip Rehberger"]
description = "IP address utilities — CIDR matching, subnet calculation, classification, and anonymization"
license = "MIT"
readme = "README.md"
repository = "https://github.com/philiprehberger/rs-ip-utils"
documentation = "https://docs.rs/philiprehberger-ip-utils"
keywords = ["ip", "cidr", "network", "subnet", "ipv6"]
categories = ["network-programming"]
